# gol

./: .clang-tidy  .gdbinit  .gitattributes  .gitignore  .leak-sanitizer-suppressions  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: build-and-test.yml
assets/skybox/: skybox.model
cmake/: common.cmake  dependencies.cmake
engine/: CMakeLists.txt
engine/include/engine/: algorithm.hpp  camera.hpp  context.hpp  error.hpp  fundamental.hpp  gl.hpp  image.hpp  imgui.hpp  log.hpp  log_macro.hpp  math.hpp  mesh.hpp  ranges.hpp  scene.hpp  sdl.hpp  sdl_dialog.hpp  ticker.hpp  util.hpp
engine/src/: camera.cpp  context.cpp  gl.cpp  image.cpp  imgui.cpp  log.cpp  mesh.cpp  scene.cpp  sdl.cpp  ticker.cpp  util.cpp
gol/: CMakeLists.txt
gol/include/gol/: world.hpp  world_json.hpp  world_scene_node.hpp
gol/src/: main.cpp  world.cpp  world_json.cpp  world_scene_node.cpp
gravity/: CMakeLists.txt
gravity/src/: main.cpp
